# AliaCan

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in
src/: aliasmanager.cpp  aliasmanager.hpp  backupmanager.cpp  backupmanager.hpp  configfilehandler.cpp  configfilehandler.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  shelldetector.cpp  shelldetector.hpp
tests/: main.cpp  test_aliasmanager.cpp  test_confighandler.cpp  test_shelldetector.cpp  utils.hpp
